alignement issue

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
 .content{
 background-color: #282c34;
 display: flex;
-min-width: 100vw;
+width: 100vw;
 flex-direction: column;
 align-items: center;
 
