--- a/src/History.css
+++ b/src/History.css
@@ -5,7 +5,7 @@
      flex-direction: row;
      flex-grow: 1; 
      flex-wrap: wrap;
-     min-width: 95vw;
+     width: 95vw;
      max-height: 100vh;
      height: 20vh;
      color: #fff;
